plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.0'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.diffplug.spotless' version '7.2.1'
}

group = 'com.asdf'
version = '0.0.1-dev'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'mysql:mysql-connector-java:8.0.32'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'

	// Import TestContainers for JUnit 5
	// 임시 MySQL 컨테이너를 생성하여 유닛테스트를 수행하기 위란 의존성 추가
	testImplementation 'org.testcontainers:junit-jupiter:1.20.1'
	testImplementation 'org.testcontainers:testcontainers:1.20.1'
	testImplementation 'org.testcontainers:mysql:1.20.1'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// 테스트 태스크를 구성합니다.
tasks.named('test') {
	useJUnitPlatform()

	// 테스트 실행 시 상세한 결과 출력 활성화
	testLogging {
		// 테스트 이벤트 중 어떤 것을 로그로 출력할지 설정
		events "passed", "skipped", "failed"

		// 테스트 케이스 별 결과를 항상 출력하도록 설정
		outputs.upToDateWhen { false }

		// Java Agent 경고 메시지 억제
		jvmArgs '-XX:+EnableDynamicAgentLoading'
	}
}

// Spotless 플러그인을 사용하여 코드 양식을 자동으로 맞춥니다.
spotless {
	// Java 파일에 대한 포매팅 설정을 추가합니다.
	java {
		// Google Java Format 적용
		googleJavaFormat('1.30.0').aosp().reflowLongStrings()
	}
}

// build 할 때 spotlessApply를 실행하여 자동으로 코드의 양식을 맞춥니다.
build.dependsOn 'spotlessApply'
